# Elysium_DiscordBot

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README  README.md  pyproject.toml  requirements.txt
elysium-bot/: __init__.py  config.py  config_template.json  functions.py  main.py  utils.py
elysium-bot/cogs/: __init__.py  moderationcog.py  twitchcog.py  utilitycog.py  yt-musiccog.py
